k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trusted-api
  name: trusted-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trusted-api
  template:
    metadata:
      labels:
        app: trusted-api
    spec:
      containers:
        - image: ghcr.io/xkcd-2347/trust-api:latest
          imagePullPolicy: Always
          name: trusted-api
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /openapi.json
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /openapi.json
              port: 8080
            initialDelaySeconds: 10
