k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trusted-api
  name: trusted-api
spec:
  ports:
  - name: endpoint
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: trusted-api
  type: ClusterIP
