k8s/api/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: trusted-api
  name: api
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: trusted-api
    weight: 100
  wildcardPolicy: None
